# discord-tts-bot

./: .actrc  .dockerignore  .envrc.sample  .gitignore  .gitmessage  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  deny.toml  docker-compose.yml  fly-tts-2.toml  fly-tts.toml  fly.toml  rust-toolchain.toml  stopped--fly.toml
.cursor/rules/: docstring_rule.mdc
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml  docker-compose.yml
.github/: dependabot.yml  labeler.yml
.github/chglog/: changelog.yml  release.yml
.github/workflows/: bump-update-release.yml  codeql-analysis.yml  coverage.yml  deploy-to-fly.yml  deploy-tts-to-fly.yml  deploy-tts2-to-fly.yml  docker-test.yml  heroku-deploy-music.yml  heroku-deploy.yml  issue-link.yml  label.yml  light-test.yml  lint.yml  push-tag.yml  release.yml  restart-fly-tts.yml  restart-fly.yml  test.yml
app/: Cargo.toml  Dockerfile
app/src/: main.rs
docker/: Dockerfile  Dockerfile.music
src/: constants.rs  error.rs  framework.rs  lib.rs  main.rs
src/commands/: mod.rs
src/commands/services/: invite.rs  join.rs  mod.rs  play.rs  queue.rs
src/commands/services/join/: mod.rs  voice_event_handler.rs
src/commands/services/load_url/: mod.rs
src/commands/usecase/: clear.rs  invite.rs  mod.rs  play.rs  queue.rs  service.rs
src/commands/usecase/join/: mod.rs
src/commands/usecase/message_commands/: bgm.rs  clear.rs  deafen.rs  help.rs  invite.rs  join.rs  leave.rs  mod.rs  mute.rs  ojoin.rs  ping.rs  play.rs  play_fade.rs  queue.rs  skip.rs  undeafen.rs  unmute.rs
src/commands/usecase/services/: clear.rs  deafen.rs  error.rs  invite.rs  leave.rs  mod.rs  mute.rs  play.rs  queue.rs  repeat.rs  select_channel.rs  skip.rs  undeafen.rs  unmute.rs  utils.rs  voice_utils.rs
src/commands/usecase/services/join/: mod.rs  service.rs  voice_event_handler.rs
src/commands/usecase/services/play/: mod.rs  play_fade.rs  service.rs  utils.rs
src/commands/usecase/slash_commands/: clear.rs  deafen.rs  invite.rs  join.rs  join_select.rs  leave.rs  mod.rs  mute.rs  ojoin.rs  ping.rs  play.rs  queue.rs  repeat.rs  select_channel.rs  skip.rs  undeafen.rs  unmute.rs
src/handler/: error.rs  message.rs  mod.rs  model.rs
src/handler/model/: context.rs  mod.rs  speaker.rs  text_to_speech_message.rs  voice.rs
src/handler/model/voice/: mod.rs  path.rs  tts.rs
src/handler/services/: mod.rs
src/handler/usecase/: interface.rs  mod.rs  set_help_message_to_activity.rs  speech_welcome_see_you.rs  text_to_speech.rs
src/handler/usecase/text_to_speech/: config.rs  mod.rs  speech_options.rs  text_to_speech_base.rs  text_to_speech_message.rs
src/infrastructure/: guild_path.rs  mod.rs  sound_file.rs  sound_path.rs  speech_file_path.rs
src/infrastructure/aws/: mod.rs  tts.rs
src/infrastructure/path_router/: guild_path.rs  mod.rs  shared_sound.rs
src/model/: message.rs  mod.rs
src/model/voice/: mod.rs  path.rs
src/services/: mod.rs
src/slash_commands/: join.rs
src/tts/: mod.rs
terraform/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup  versions.tf
workflows/: issue-link.yml
