[package]
name = "discord-tts-bot"
version = "2.3.0"
authors = ["tktcorporation"]
edition = "2021"
license = "MIT"
readme = "README.md"

[profile.release]
debug = true

[features]
tts = ["aws"]
music = ["aws"]
aws = []
mock = []

default = ["tts"]

[dependencies]
hyper = "1.3.1"
polly = { version = "1.15.0", package = "aws-sdk-polly" }
aws-config = "1.3.3"
aws-types = { version = "1.3.3", package = "aws-types" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
tiger = "0.2.1"
rand = "0.8.5"
serde_json = "1.0.134"
regex = "1.11.0"
html-escape = "0.2.13"
mockall = "0.13.0"
mockall_double = "0.3.0"
serde = "1.0.217"
sentry = { version = "0.35.0", features = ["tracing"] }
futures = "0.3"

[dependencies.reqwest]
version = "0.11"
features = ["stream"]

[dependencies.songbird]
version = "0.4.6"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5.2"
features = ["aac", "mp3", "isomp4", "alac"]

[dependencies.serenity]
version = "0.12.4"
features = ["client", "gateway", "cache", "standard_framework", "voice", "rustls_backend", "http"]

[dependencies.tokio]
version = "1.36.0"
features = ["macros", "rt-multi-thread"]
