[package]
name = "discord-tts-bot"
version = "2.4.3"
authors = ["tktcorporation"]
edition = "2021"
license = "MIT"
readme = "README.md"

[profile.release]
debug = true

[features]
tts = ["aws"]
music = ["aws"]
aws = []
mock = []

default = ["tts"]

[dependencies]
hyper = "1.8.1"
polly = { version = "1.100.0", package = "aws-sdk-polly" }
aws-config = "1.8.14"
aws-types = { version = "1.3.13", package = "aws-types" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }
tiger = "0.2.1"
rand = "0.10.0"
serde_json = "1.0.149"
regex = "1.12.3"
html-escape = "0.2.13"
mockall = "0.14.0"
mockall_double = "0.3.1"
serde = "1.0.228"
sentry = { version = "0.46.2", features = ["tracing"] }
futures = "0.3"

[dependencies.reqwest]
version = "0.12"
features = ["stream"]

[dependencies.songbird]
version = "0.5.0"
features = ["builtin-queue", "driver", "gateway"]

[dependencies.symphonia]
version = "0.5.5"
features = ["aac", "mp3", "isomp4", "alac"]

[dependencies.serenity]
version = "0.12.5"
features = ["client", "gateway", "cache", "standard_framework", "voice", "rustls_backend", "http"]

[dependencies.tokio]
version = "1.49.0"
features = ["macros", "rt-multi-thread"]
