[package]
name = "app"
version = "0.1.0"
authors = ["tktcorporation"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "framework",
    "standard_framework",
] }
tokio = { version = "1", features = ["full"] }
